...
    [pages.length, setPage]
  );
  return (
    <>
      <View style={styles.buttons}>
        <Button
          testID="scroll-enabled-button"
          text={scrollEnabled ? 'Scroll Enabled' : 'Scroll Disabled'}
          onPress={toggleScroll}
        />
        <Button
          style={styles.buttonAdjustment}
          text={overdragEnabled ? 'Overdrag Enabled' : 'Overdrag Disabled'}
          onPress={() => toggleOverdrag()}
        />
      </View>
      {!disablePagesAmountManagement ? (
        <View style={styles.buttons}>
          <Button
            testID="add-page-button"
            text="Add new page"
            onPress={addPage}
          />
          <Button
            testID="remove-page-button"
            text="Remove last page"
            onPress={removePage}
          />
        </View>
      ) : null}
      <View style={styles.buttons}>
        <Button
          testID="add-page-button"
          text={isAnimated ? 'Turn off animations' : 'Turn animations back on'}
          onPress={toggleAnimation}
        />
        <View style={styles.scrollState}>
          <Text style={styles.scrollStateText}>
            ScrollState[ {scrollState} ]
          </Text>
        </View>
      </View>
      <View style={styles.buttons}>
        <Button
          testID="start-page-button"
          text="Start"
          disabled={activePage === 0}
          onPress={firstPage}
        />
        <Button
          testID="prev-page-button"
          text="Prev"
          disabled={activePage === 0}
          onPress={prevPage}
        />
        <Button
          testID="next-page-button"
          text="Next"
          disabled={activePage === pages.length - 1}
          onPress={nextPage}
        />
        <Button
          testID="last-page-button"
          text="Last"
          disabled={activePage === pages.length - 1}
          onPress={lastPage}
        />
      </View>
      <View style={styles.progress}>
        <Text style={styles.buttonText}>
...
