...
  {
    title: 'Fundamental Examples',
    data: [
      {
        component: BasicPagerViewExampleScreen,
        name: 'Basic Example',
        testID: 'example-basic-horizontal',
      },
      {
        component: VerticalBasicPagerViewExampleScreen,
        name: 'Vertical Basic Example',
        testID: 'example-basic-vertical',
      },
...
