...
    Array(PAGES)
      .fill(1)
      .map((_, index) => createPage(index))
  );

  return (
    <AnimatedPagerView testID="pager-view" style={styles.flex}>
      {pages.map((page) => (
        <ScrollView key={page.key} style={styles.content}>
          {Array(20)
            .fill(1)
            .map((_, index) => (
              <View key={`${page.key}_${index}`} style={styles.separator}>
...
