...
              style={styles.flex}
              initialPage={0}
              scrollEnabled={false}
            >
              <View style={styles.sectionContainer}>
                <Page
                  title="First Question"
                  description="What is your favourite lib ?"
                  onPress={useCallback(() => setPage(1), [setPage])}
                  buttonTitle="Go to next question"
                />
              </View>
              <View style={styles.sectionContainer}>
                <Page
...
