appId: com.pagerviewexample
# tc10 The amount of likes added does not change while swiping pages
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- assertVisible: 'Page 1 / 10 '
- tapOn:
    id: "like-count-touchable"
- assertVisible: '8 likes'
- tapOn: 'Next'
- assertVisible: 'Page 2 / 10 '
- assertVisible: '7 likes'
- tapOn: 'Prev'
- assertVisible: '8 likes'
- tapOn: 'Next'
- tapOn:
    id: "like-count-touchable"
- assertVisible: '8 likes'
- tapOn: 'Prev'
- assertVisible: '8 likes'
