appId: com.pagerviewexample
# tc4 The [Add new page] button adds pages one by one
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- tapOn: 'Add new page'
- assertVisible: 'Page 1 / 11 '
- repeat:
    times: 2
    commands:
      - tapOn:
          text: 'Add new page'
          retryTapIfNoChange: false
- assertVisible: 'Page 1 / 13 '
- tapOn: 'Last'
- assertVisible: 'Page 13 / 13 '
