appId: com.pagerviewexample
# tc5 The [Remove last page] button removes pages one by one
---
- launchApp
- extendedWaitUntil:
    visible: "PagerView Example"
    timeout: 15000
- tapOn: 'Basic Example'
- assertVisible: 'Page 1 / 10 '
- tapOn: 'Page 1 / 10 '
- tapOn: 'Add new page'
- assertVisible: 'Page 1 / 11 '
- repeat:
    times: 2
    commands:
      - tapOn:
          text: 'Add new page'
          retryTapIfNoChange: false
- assertVisible: 'Page 1 / 13 '
- tapOn: 'Remove last page'
- repeat:
    times: 2
    commands:
      - tapOn:
          text: "Remove last page"
          retryTapIfNoChange: false
- assertVisible: 'Page 1 / 10 '
