appId: com.pagerviewexample
# tc9 The active [Like] button updates on multiple pages
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- assertVisible: 'Page 1 / 10 '
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-text"
- assertVisible: '8 likes'
- tapOn: 'Next'
- assertVisible: 'Page 2 / 10 '
- assertVisible:
    id: "like-count-text"
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-touchable"
- assertVisible: '8 likes'
- tapOn: 'Last'
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-touchable"
- assertVisible: '8 likes'
- tapOn: 'Prev'
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-text"
- assertVisible: '8 likes'
