appId: com.pagerviewexample
---
- tapOn:
    id: 'scroll-enabled-button'

- extendedWaitUntil:
    visible: 'Scroll Disabled'
    timeout: 5000

- swipe:
    from:
      id: 'pager-view-vertical'
    direction: UP
    duration: 100

- assertVisible:
    id: 'pageNumber0'

- tapOn:
    id: 'scroll-enabled-button'

- extendedWaitUntil:
    visible: 'Scroll Enabled'
    timeout: 5000

- swipe:
    from:
      id: 'pager-view-vertical'
    direction: UP
    duration: 100

- extendedWaitUntil:
    visible:
      id: 'pageNumber1'
    timeout: 5000
