appId: com.pagerviewexample
---
- runFlow: tc1_pager_vertical_basic_example.yaml
- tapOn: 'Scroll Enabled'
- swipe:
    from:
      id: 'pager-view'
    direction: UP
    duration: 100
- assertVisible:
    text: 'page number 0'
- tapOn: 'Scroll Disabled'
- swipe:
    from:
      id: 'pager-view'
    direction: UP
    duration: 100
- assertVisible:
    text: 'page number 1'
- tapOn:
    id: 'next-page-button'
- assertVisible:
    text: 'page number 2'
- tapOn:
    id: 'prev-page-button'
- assertVisible:
    text: 'page number 1'
- tapOn:
    id: 'start-page-button'
- assertVisible:
    text: 'page number 0'
- tapOn:
    id: 'last-page-button'
- assertVisible:
    text: 'page number 9'
- tapOn:
    id: 'remove-page-button'
- assertVisible:
    text: 'page number 8'
- tapOn:
    id: 'add-page-button'
- tapOn:
    id: 'next-page-button'
- assertVisible:
    text: 'page number 9'
