appId: ${APP_ID}
name: Verify Basic Example flow
---
- launchApp
- assertVisible: 'PagerView Example (Fabric)'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- assertVisible: 'Control'
- assertVisible: 'Last'
- tapOn: 'Last'
- assertVisible: 'page number 9'
- assertVisible: 'Page 10 / 10 '
- assertVisible: 'Prev'
- tapOn: 'Prev'
- repeat:
    times: 8
    commands:
      - tapOn: 'Prev'
- assertVisible: 'page number 0'
- assertVisible: 'Page 1 / 10 '
- tapOn: 'Prev'
- assertVisible: 'page number 0'
- assertVisible: 'Page 1 / 10 '
