appId: ${APP_ID}
# tc16 The active [Like] button is on each page
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: 'Basic Example'
- assertVisible: 'Page 1 / 10 '
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-text"
- assertVisible: '8 likes'
- tapOn: 'Next'
- assertVisible: 'Page 2 / 10 '
- assertVisible:
    id: "like-count-text"
- assertVisible: '7 likes'
- assertVisible:
    id: "like-count-touchable"
- repeat:
    times: 9
    commands:
      - tapOn:
          id: "like-count-touchable"
          retryTapIfNoChange: false
- assertVisible: '16 likes'
- tapOn: 'Last'
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-touchable"
- repeat:
    times: 25
    commands:
      - tapOn:
          id: "like-count-touchable"
          retryTapIfNoChange: false
- assertVisible: '33 likes'
- tapOn: 'Prev'
- assertVisible: '7 likes'
- tapOn:
    id: "like-count-text"
- repeat:
    times: 79
    commands:
      - tapOn:
          id: "like-count-touchable"
          retryTapIfNoChange: false
- assertVisible: '87 likes'
