appId: ${APP_ID}
#  tc17 The amount of likes added doesn’t change while swiping pages
---
- runFlow: tc16_pager_basic_example.yaml
- tapOn: 'Next'
- assertVisible: '33 likes'
- tapOn: 'Prev'
- assertVisible: '87 likes'
- tapOn: 'Start'
- assertVisible: '8 likes'
- tapOn: 'Next'
- assertVisible: '16 likes'
- tapOn: 'Prev'
- assertVisible: '8 likes'
- tapOn: 'Last'
- assertVisible: '33 likes'
- tapOn: 'Prev'
- assertVisible: '87 likes'
