appId: ${APP_ID}
#  tc7 The [Remove last page] button enables user to remove pages one by one
---
- launchApp
- extendedWaitUntil:
    visible: "PagerView Example"
    timeout: 60000
- tapOn: 'Basic Example'
- assertVisible: 'Page 1 / 10 '
- tapOn: 'Page 1 / 10 '
- tapOn: 'Add new page'
- assertVisible: 'Page 1 / 11 '
- repeat:
    times: 25
    commands:
      - tapOn:
          text: 'Add new page'
          retryTapIfNoChange: false
- assertVisible: 'Page 1 / 36 '
- tapOn: 'Remove last page'
- repeat:
    times: 36
    commands:
      - tapOn:
          text: "Remove last page"
          retryTapIfNoChange: false
- assertVisible: 'Page 1 / 0 '
