appId: org.reactjs.native.example.FabricExample
# tc57 The [Overdrag Disable] button can switch states between disabled and enabled any number of times
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/ios/alert dialog dismissal_pager_OnPageSelected_example.yaml
- tapOn: "Turn off animations"
- tapOn: "Overdrag Disabled"
- assertVisible: "Overdrag Enabled"
- tapOn: "Overdrag Enabled"
- assertVisible: "Overdrag Disabled"
- tapOn: "Overdrag Disabled"
- assertVisible: "Overdrag Enabled"
- tapOn: "Overdrag Enabled"
- assertVisible: "Overdrag Disabled"