appId: ${APP_ID}
# tc42 The [Scroll Enabled] button can switch states between enabled to disabled and back any number of times
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'OnPageScroll Example'
- assertVisible: 'OnPageScroll Example'
- tapOn: 'Scroll Enabled'
- assertVisible: 'Scroll Disabled'
- tapOn: 'Scroll Disabled'
- assertVisible: 'Scroll Enabled'
- tapOn: 'Scroll Enabled'
- assertVisible: 'Scroll Disabled'
- tapOn: 'Scroll Disabled'
- assertVisible: 'Scroll Enabled'
- tapOn: 'Scroll Enabled'
- assertVisible: 'Scroll Disabled'
- tapOn: 'Scroll Disabled'
- assertVisible: 'Scroll Enabled'
- tapOn: 'Scroll Enabled'
- assertVisible: 'Scroll Disabled'
- tapOn: 'Scroll Disabled'
- assertVisible: 'Scroll Enabled'
- tapOn: 'Scroll Enabled'
- assertVisible: 'Scroll Disabled'
- tapOn: 'Scroll Disabled'
- assertVisible: 'Scroll Enabled'
- tapOn: 'Scroll Enabled'
